Solve contrast color issue by increasing the contrast ratio

--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ body {
     width: 40%;
     height: 48px;
     margin: 13px auto 24px 30%;
-    background-color: #36b37f;
+    background-color: #008552;
     border-radius: 4px;
     font-weight: 500;
     font-size: 17px;
@@ -317,7 +317,7 @@ body {
     margin-top: 24px;
     margin-left: 30%;
     margin-bottom: 24px;
-    background-color: #36b37f;
+    background-color: #008552;
     border-radius: 4px;
     font-weight: 500;
     font-size: 17px;
@@ -452,7 +452,7 @@ body {
     border: none;
     margin-left: 30.27%;
     height: 48px;
-    background-color: #36b37f;
+    background-color: #008552;
     border-radius: 4px;
     font-weight: 500;
     font-size: 17px;
